unpackaged/main/default/objects/Inquiry__c/fields/Classification__c.field-meta.xml
<CustomField>
        <fullName>Classification__c</fullName>
        <formula>IF (TEXT(Manufactured_by_Company__c) = "Yes" &amp;&amp; TEXT(Product_or_Packaging_Issue__c) = "No" &amp;&amp; TEXT(Patient_Affected__c) = "No", "NOT A COMPLAINT",
IF (TEXT( Manufactured_by_Company__c) = "No" &amp;&amp; TEXT( Product_or_Packaging_Issue__c) = "No" &amp;&amp; TEXT( Patient_Affected__c) = "No", "NOT A COMPLAINT",
IF (TEXT( Manufactured_by_Company__c) = "Yes" &amp;&amp; TEXT( Product_or_Packaging_Issue__c) = "Yes" &amp;&amp; TEXT( Patient_Affected__c) = "No", "COMPLAINT",
IF (TEXT( Manufactured_by_Company__c) = "Yes" &amp;&amp; TEXT( Product_or_Packaging_Issue__c) = "No" &amp;&amp; TEXT( Patient_Affected__c) = "Yes", "COMPLAINT",
IF (TEXT( Manufactured_by_Company__c) = "Yes" &amp;&amp; TEXT( Product_or_Packaging_Issue__c) = "Yes" &amp;&amp; TEXT( Patient_Affected__c) = "Yes", "COMPLAINT",
IF (TEXT( Manufactured_by_Company__c) = "No" &amp;&amp; TEXT( Product_or_Packaging_Issue__c) = "Yes" &amp;&amp; TEXT( Patient_Affected__c) = "Yes", "NOT A COMPLAINT",
IF (TEXT( Manufactured_by_Company__c) = "No" &amp;&amp; TEXT( Product_or_Packaging_Issue__c) = "Yes" &amp;&amp; TEXT( Patient_Affected__c) = "No", "NOT A COMPLAINT",
IF (TEXT( Manufactured_by_Company__c) = "No" &amp;&amp; TEXT( Product_or_Packaging_Issue__c) = "No" &amp;&amp; TEXT( Patient_Affected__c) = "Yes", "NOT A COMPLAINT",NULL))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classification</label>
        <type>Text</type>
    </CustomField>