unpackaged/main/default/objects/Inquiry__c/fields/Classification_verify__c.field-meta.xml
<CustomField>
        <fullName>Classification_verify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Classification verify</label>
        <type>Checkbox</type>
    </CustomField>