unpackaged/main/default/objects/Inquiry__c/fields/Contact__c.field-meta.xml
<CustomField>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>CMPL123__Contact__c</referenceTo>
        <relationshipName>Issue</relationshipName>
        <type>Lookup</type>
    </CustomField>