unpackaged/main/default/objects/Inquiry__c/fields/Description__c.field-meta.xml
<CustomField>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>