unpackaged/main/default/objects/Inquiry__c/fields/Inquiry_Type_c__c.field-meta.xml
<CustomField>
        <fullName>Inquiry_Type_c__c</fullName>
        <label>Inquiry Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Request for Information</fullName>
                </value>
                <value>
                    <fullName>Product or Packaging</fullName>
                </value>
                <value>
                    <fullName>Patient Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>