unpackaged/main/default/objects/Inquiry__c/fields/Patient_Affected__c.field-meta.xml
<CustomField>
        <fullName>Patient_Affected__c</fullName>
        <label>Patient Affected?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>