unpackaged/main/default/objects/Inquiry__c/fields/Product_or_Packaging_Issue__c.field-meta.xml
<CustomField>
        <fullName>Product_or_Packaging_Issue__c</fullName>
        <label>Product or Packaging Issue?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>