unpackaged/main/default/objects/Inquiry__c/fields/Reported_Date_and_Time__c.field-meta.xml
<CustomField>
        <fullName>Reported_Date_and_Time__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Reported Date and Time</label>
        <type>DateTime</type>
    </CustomField>