unpackaged/main/default/objects/Inquiry__c/fields/Subject__c.field-meta.xml
<CustomField>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </CustomField>