unpackaged/main/default/objects/Inquiry__c/fields/Workflow_Status_update__c.field-meta.xml
<CustomField>
        <fullName>Workflow_Status_update__c</fullName>
        <label>Workflow Status update</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>